# iquote-fastapi

./: .pre-commit-config.yaml  README.md  docker-compose.yml  sonar-project.properties
iquote/: .env.sample  .env.test  Dockerfile.dev  Makefile  prestart.sh  pyproject.toml  requirements.txt  setup.cfg  tox.ini
iquote/app/: app_pre_start.py  celeryworker_pre_start.py  main.py  tests_pre_start.py  worker.py
iquote/app/core/: config.py
iquote/app/crud/: __init__.py  crud_item.py  crud_quote.py  crud_quote_author.py  crud_quote_categories.py
iquote/app/db/: init_db.py  session.py
iquote/app/models/: item.py  quote.py  user.py
iquote/app/schemas/: __init__.py  quote.py  quote_author.py  quote_categories.py  user.py
iquote/migrations/: env.py
iquote/migrations/versions/: 0c3684e799cb_.py  1ac9dec977f6_.py  1b844dfce1f3_.py  22589fee036f_.py  41735d82a210_.py  532274103aee_.py  6ab2ea10b206_.py  73c6b06a4275_.py  7a90bd595da1_.py  a3fbdc17f914_.py  aff7b781d5b5_.py  e2125ba675ae_.py  fc69d2b0cf1b_.py
iquote/src/: app_pre_start.py  celeryworker_pre_start.py  main.py  utils.py
iquote/src/core/: utils.py
iquote/src/crud/: __init__.py  base.py  crud_author.py  crud_categories.py  crud_category.py  crud_quote.py  crud_user.py
iquote/src/db/: base.py
iquote/src/models/: __init__.py  author.py  category.py  quote.py  user.py
iquote/src/schemas/: __init__.py  author.py  categories.py  category.py  item.py  quote.py
iquote/tests/: conftest.py  test_health.py  test_ping.py
iquote/tests/crud/: test_author.py  test_categories.py  test_item.py  test_quote.py  (+3 more)
(+39 files in other folders)
