[tool.poetry]
name = "iquote-fastapi"
version = "0.1.0"
description = "Your package description."
authors = ["Lalu Erfandi Maula Yusnu <nunenuh@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.10"
aerich = "^0.7.1"
asyncpg = "^0.27.0"
celery = "^5.2.2"
email-validator = "^2.0.0"
emails = "^0.6"
faker = "^18.11.2"
fastapi = "^0.100.0"
fastapi-healthcheck = "^0.2.12"
fastapi-healthcheck-sqlalchemy = "^0.1.0"
fastapi-healthcheck-uri = "^0.1.0"
gunicorn = "^20.1.0"
httpx = "^0.23.3"
jinja2 = "^2.11.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.8.5"
pydantic = "^2.0.2"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
python-multipart = "^0.0.5"
raven = "^6.10.0"
requests = "^2.31.0"
sqlalchemy = "^2.0.17"
stripe = "^5.4.0"
tenacity = "^8.2.2"
# ump-pydantic = "^0.1.0"
uvicorn = "^0.21.1"
pydantic-settings = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
mypy = "^0.770"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
autoflake = "^2.2.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
